--- a/checkout.html
+++ b/checkout.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
-  <title>Home</title>
+  <title>Checkout</title>
 </head>
 <body>
   <nav>
@@ -13,8 +13,12 @@
       <li><a href="cart.html">Cart</a></li>
     </ul>
   </nav>
-  <h1>Products</h1>
-  <div id="products"></div>
-  <script src="index.js"></script>
+  <h1>Checkout</h1>
+  <form id="checkout-form">
+    <input type="text" id="name" placeholder="Name" required>
+    <input type="email" id="email" placeholder="Email" required>
+    <button type="submit">Place Order</button>
+  </form>
+  <script src="checkout.js"></script>
 </body>
 </html>
