--- a/product.html
+++ b/product.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
-  <title>Home</title>
+  <title>Product</title>
 </head>
 <body>
   <nav>
@@ -13,8 +13,8 @@
       <li><a href="cart.html">Cart</a></li>
     </ul>
   </nav>
-  <h1>Products</h1>
-  <div id="products"></div>
-  <script src="index.js"></script>
+  <h1>Product Details</h1>
+  <div id="product"></div>
+  <script src="product.js"></script>
 </body>
 </html>
