--- a/index.html
+++ b/index.html
@@ -3,18 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Real-Time Chat</title>
   <link rel="stylesheet" href="styles.css">
-  <title>Home</title>
 </head>
 <body>
-  <nav>
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="cart.html">Cart</a></li>
-    </ul>
-  </nav>
-  <h1>Products</h1>
-  <div id="products"></div>
-  <script src="index.js"></script>
+  <div id="chat-container">
+    <div id="messages"></div>
+    <input id="messageInput" type="text" placeholder="Type a message" />
+    <button id="sendMessage">Send</button>
+  </div>
+  <script src="script.js"></script>
 </body>
 </html>
