--- a/index.html
+++ b/index.html
@@ -1,34 +1,17 @@
-html
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blog</title>
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Real-Time Chat</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="container">
-        <header>
-            <h1>My Blog</h1>
-        </header>
-        <main>
-            <section id="post-list">
-                <!-- Blog posts will be dynamically inserted here -->
-            </section>
-            <section id="post-form">
-                <h2>Create / Edit Post</h2>
-                <form id="blog-form">
-                    <input type="hidden" id="post-id">
-                    <label for="title">Title:</label>
-                    <input type="text" id="title" required>
-                    <label for="content">Content:</label>
-                    <textarea id="content" required></textarea>
-                    <button type="submit">Save</button>
-                </form>
-            </section>
-        </main>
-    </div>
-    <script src="script.js"></script>
+  <div id="chat-container">
+    <div id="messages"></div>
+    <input id="messageInput" type="text" placeholder="Type a message" />
+    <button id="sendMessage">Send</button>
+  </div>
+  <script src="script.js"></script>
 </body>
 </html>
